# Lemanic-Life-Sciences-Hackathon-2025

./: .gitignore  2_Decoding_ground_truth_IT.csv  Kappa.py  README.md  SpeechClassifier.ipynb  WavLM.py  classifier_API.py  combined_output.csv  combining_block.py  config.json.example  data_processing.py  explore.ipynb  final_words.csv  fine_tune.py  fine_tune_wavlm.ipynb  finetune_wav2vec_1.ipynb  finetunewavlm.py  first_phoneme.py  ground_truth.csv  ground_truth_it_coder_2.csv  interface.py  interface_data.csv  interface_data_FR.csv  ipa_encoder.py  main.py  microsoft_wavlmbaseplus.ipynb  output_FR.csv  pho_output.csv  phonem_test.csv  phoneme_list.json  prepare_csv_file.ipynb  pyproject.toml  train_phonemes_clean.csv  train_wavlm.py  val_phonemes_clean.csv  wavlm_base_plus_phonemizer.ipynb  whisper.csv  whisper_output.csv
Combining block/: combining_block.py  whisper_output.csv
Combining_block/: combined_output.csv  combining_block.py
Whisper/: README.md  pipeline.py  whisper.ipynb
configs/: fine_tuning.yaml  phoneme_lengths.json
custom_tokenizer/: vocab.json
data_csv/step1_whisper/: Segment_medium_FR_cleaned.csv  whisper.ipynb
notebooks/: explore.ipynb
outputs/phonemizer/: phonemized_FR.csv  phonemized_IT.csv
phoneme_tokenizer/: vocab.json
processed/: 2_Decoding_ground_truth_IT.csv  2_Phoneme_Deleletion_ground_truth_FR.csv
src/: phoneme_mapper.py  phoneme_recognizer.py
src/fine_tuning/: fine_tune.py
src/phonemizer/: commonvoice.py  ipa_encoder.py  phonemizer.py  text_phonemizer.py  (+1 more)
word_segmenter/: Segment_medium_IT_cleaned.csv
(+1 files in other folders)
