[project]
name = "lemanic-life-sciences-hackathon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "torch>=2.2.1",
    "torchaudio==2.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
