[project]
name = "lemanic-life-sciences-hackathon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "git-filter-repo>=2.47.0",
    "ipywidgets>=8.1.6",
    "jiwer>=3.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "numpy<2.0.0",
    "pandas>=2.2.3",
    "phonemizer>=3.3.0",
    "text2phonemesequence>=0.1.4",
    "torch>=2.2.1",
    "torchaudio==2.2.1",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.51.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
